# UnderscoreForPython

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  underscore.py
src/submodule/: collections.py
